card view and navhost

--- a/app/src/main/res/layout/fragment_detay.xml
+++ b/app/src/main/res/layout/fragment_detay.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragment.DetayFragment" >
+    tools:context=".ui.fragment.DetayFragment">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarDetay"
@@ -16,4 +16,42 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/ivFilm"
+        android:layout_width="325dp"
+        android:layout_height="387dp"
+        android:layout_marginTop="29dp"
+        android:src="@drawable/PulpFiction"
+        app:layout_constraintBottom_toTopOf="@+id/tvFilmAdi"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbarDetay" />
+
+    <TextView
+        android:id="@+id/tvFiyat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="70dp"
+        android:text="TextView"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvFilmAdi" />
+
+    <TextView
+        android:id="@+id/tvFilmAdi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="TextView"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/tvFiyat"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ivFilm" />
 </androidx.constraintlayout.widget.ConstraintLayout>
