--- a/app/src/main/res/layout/card_tasarim.xml
+++ b/app/src/main/res/layout/card_tasarim.xml
@@ -19,21 +19,21 @@
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="220dp"
-                android:layout_height="292dp"
-                android:layout_marginTop="4dp"
+                android:layout_width="207dp"
+                android:layout_height="297dp"
+                android:layout_marginStart="2dp"
+                android:layout_marginEnd="2dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/PulpFiction" />
+                app:srcCompat="@drawable/pulp" />
 
             <TextView
                 android:id="@+id/textViewFilmAdi"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="3dp"
                 android:text="Pulp Fiction"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -55,7 +55,7 @@
                 android:id="@+id/buttonSepet"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="4dp"
                 android:layout_marginEnd="4dp"
                 android:text="Sepet"
                 app:layout_constraintEnd_toEndOf="parent"
